gpu-operator-install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nvidia-gpu-operator
