nfd-operator-install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-nfd
