gpu-burn-workload.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gpu-burn
---
apiVersion: v1
kind: Pod
metadata:
  name: gpu-burn
  namespace: gpu-burn
spec:
  nodeSelector:
    kubernetes.io/hostname: <GPU_NODE_NAME> # Replace <GPU_NODE_NAME> with the name of the GPU node
  containers:
    - name: gpu-burn
      image: quay.io/vemporop/gpu-burn:cuda12.3.0-ubi9-aarch64 # Replace with the desired image
      resources:
        requests:
          nvidia.com/gpu: 1
        limits:
          nvidia.com/gpu: 1
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        capabilities:
          drop:
            - ALL
        runAsNonRoot: true
        allowPrivilegeEscalation: false
  restartPolicy: Never
  tolerations:
  - effect: NoSchedule
    key: feature.node.kubernetes.io/gpu-node
    operator: Exists
