gpu-cluster-policy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: gpu-cluster-policy
spec:
  daemonsets:
    priorityClassName: system-node-critical
    tolerations:
    - key: nvidia.com/gpu
      operator: Exists
      effect: NoSchedule
  operator:
    defaultRuntime: crio
  driver:
    enabled: true
    # If you have a custom GPU driver image, replace the values below
    # image: <YOUR_CUSTOM_GPU_DRIVER_IMAGE>
    # repository: <YOUR_CUSTOM_REPOSITORY>
    # version: <YOUR_CUSTOM_VERSION>
    usePrecompiled: true
  toolkit:
    enabled: true
  devicePlugin:
    enabled: true
  dcgm:
    enabled: true
  dcgmExporter:
    enabled: true
  gfd:
    enabled: true
  migManager:
    enabled: false
  nodeStatusExporter:
    enabled: true
  validator:
    plugin:
      env:
        - name: WITH_WORKLOAD
          value: "true"
